CSS for Button alignment and Invoice Tab table and height fix

--- a/src/app/pages/manage-subscriptions/manage-subscriptions.component.scss
+++ b/src/app/pages/manage-subscriptions/manage-subscriptions.component.scss
@@ -41,7 +41,7 @@
 ::ng-deep .p-datatable-resizable>.p-datatable-wrapper {
   overflow-x: auto;
   // height: calc(100vh - 190px);
-  height: calc(100vh - 164px);
+  height: calc(100vh - 143px);
 }
 
 :host ::ng-deep .main-content-body {
